# deepresearch_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  setup.ps1
data/procurement/: suppliers.json
data/procurement/candidates/: china_manufacturing_supplier_names.csv
data/procurement/documents/: acme-sensors.md  northstar-components.md
docs/: architecture.md  eval-plan.md  project-memory.md
docs/superpowers/plans/: 2026-06-15-procurement-deepresearch-agent.md  2026-06-18-procurement-eval-v1.md  2026-06-20-china-manufacturing-supplier-candidates.md  2026-06-20-qcc-company-data-cleaning.md  2026-06-21-sqlite-company-data-layer.md  2026-06-22-rag-semantic-scope-retrieval.md  2026-06-23-agent-scope-search-integration.md  2026-06-24-a1-ownership-cleaning-modules.md  2026-06-24-a2-ownership-tables.md  2026-06-25-a3-ownership-read-layer.md  2026-06-25-a4-a5-ownership-relations.md  2026-06-25-b1-entity-resolution-nodes.md  2026-06-25-b2-graph-load.md  2026-06-26-b3-graph-traversal.md  2026-06-26-b5-hybrid-retrieval.md  2026-07-01-b7-graphrag-agent.md  2026-07-01-c1-query-complexity.md  2026-07-01-c2-query-orchestration.md  2026-07-10-c4-degradation-chain.md  2026-07-10-n1-ownership-graph-backend-interface.md  2026-07-10-n2-neo4j-ownership-backend.md  2026-07-10-n3-industry-layer.md  2026-07-11-eval-v1-deterministic-metrics.md  (+11 more)
domains/procurement/: domain.yaml
evals/procurement/: entity_resolution.synthetic.yaml  perturbation.synthetic.yaml  scope_queries.synthetic.yaml  scope_queries.yaml  scope_recall.synthetic.yaml
scripts/: build_company_database.py  build_ownership_neo4j.py  build_scope_index.py  clean_qcc_company_data.py  clean_qcc_shareholder_data.py  clean_tyc_investment_data.py  generate_china_manufacturing_candidates.py  generate_entity_golden.py  generate_perturbation_golden.py
src/deepresearch_agent/: api.py  candidate_generation.py  cli.py  company_data_cleaning.py  company_database.py  company_models.py  company_repository.py  data_loader.py  domain.py  graph_retrieval.py  graph_traversal.py  investment_data_cleaning.py  neo4j_backend.py  observability.py  ownership_backend.py  ownership_graph.py  ownership_links.py  query_complexity.py  shareholder_data_cleaning.py  state.py  supplier_resolution.py  vendor_export.py
tests/: conftest.py  test_api.py  test_api_session.py  test_api_stream.py  test_api_stream_retrieval.py  test_api_web.py  test_build_scope_index.py  test_candidate_generation.py  test_cli.py  test_cli_chat.py  test_company_data_cleaning.py  test_company_database.py  test_company_database_cli.py  test_company_models.py  test_company_repository.py  test_data_loader.py  test_deepseek_classifier.py  test_deepseek_polisher.py  test_domain.py  test_eval_metrics.py  test_eval_models.py  test_eval_perturb.py  test_eval_runner.py  test_eval_scope_quality_runner.py  test_eval_scope_runner.py  test_execute_turn.py  test_golden_gen.py  test_graph.py  test_graph_retrieval.py  test_graph_traversal.py  test_industry_layer_neo4j.py  test_investment_data_cleaning.py  test_memory_config.py  test_memory_integration.py  test_memory_service.py  test_memory_session.py  test_memory_store.py  test_neo4j_backend.py  test_neo4j_backend_env.py  test_nodes.py  (+20 more)
(+69 files in other folders)
