[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "A pluggable LangGraph DeepResearch Agent for cited supplier due diligence reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]
rag = [
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=2.7.0",
  "numpy>=1.26.0",
]
llm = [
  "openai>=1.0",
]
neo4j = [
  "neo4j>=5.0",
]
trace = [
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.scripts]
deepresearch = "deepresearch_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -m 'not slow and not neo4j'"
markers = [
  "slow: 需要重型 ML 依赖或模型下载，默认排除",
  "neo4j: 需要本地 Neo4j（docker compose up）的对拍测试，默认排除",
]
