[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "A pluggable LangGraph DeepResearch Agent for cited supplier due diligence reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]
rag = [
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=2.7.0",
  "numpy>=1.26.0",
]
llm = [
  "openai>=1.0",
]
neo4j = [
  "neo4j>=5.0",
]
trace = [
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-http>=1.20",
]
memory = [
  "mem0ai>=0.1",
  "chromadb>=0.5",
]

[project.scripts]
deepresearch = "deepresearch_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# -p no:phoenix：禁用 arize-phoenix 注册的 pytest 插件自动加载
# （它 import phoenix.server→grpc，会污染零网络测试；Phoenix 仅供 CLI --trace 手动用）
addopts = "-q -p no:phoenix -m 'not slow and not neo4j and not llm'"
markers = [
  "slow: 需要重型 ML 依赖或模型下载，默认排除",
  "neo4j: 需要本地 Neo4j（docker compose up）的对拍测试，默认排除",
  "llm: 需要外部 LLM（DeepSeek）与 mem0/chromadb 的真链路测试，默认排除",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, B=bugbear, UP=pyupgrade, C4=comprehensions
select = ["E", "F", "I", "B", "UP", "C4", "W"]
# E501 行长交给 formatter；B008 FastAPI 依赖注入模式需要；
# 以下为低信号/需逐例行为核对的风格项，先豁免、后续按需收紧：
# B905 zip strict、E731 lambda 赋值、B007 未用循环变量、B023 闭包捕获循环变量
ignore = ["E501", "B008", "B905", "E731", "B007", "B023"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
# 渐进式：先不强制全量注解，只抓明确错误
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
